2004-06-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* configure:        Updated and regenerated the TEA configure script
	* tclconfig/tcl.m4: This now works with Msys on Windows (gcc & cl)

2004-06-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/zero.c:   Make the interval between fileevent
	* generic/null.c:   notifications configurable (FR #470415).
	* generic/random.c:
	* doc/zero.man:     Add the -delay option to the manual pages.
	* doc/null.man:
	* doc/random.man:
	* tests/zero.test:  Additional tests for -delay ?ms? option.
	* tests/null.test:
	* tests/random.test:

2004-06-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* configure.in:         Changed version to 2.2.0
	* configure:
	* DESCRIPTION:
	* win/makefile.vc:
	* win/mc.rc:
	* unix/Makefile.in:     Updated unix/* build files for the new
	* unix/configure.in:    random and zero channels.
	* unix/configure:

	* generic/zero.c:       Added a 'zero' channel (FR #470414)
	* tests/zero.test:
	* doc/zero.man:
	* generic/init.c:
	* generic/memchanInt.h:
	* Makefile.in:
	* win/makefile.vc
	
2004-06-03  Andreas Kupries  <andreask@activestate.com>

	* generic/memchan.c: Added include of <stdio.h>. This does not
	  hurt compilation against 8.4, and makes compilation against 8.5
	  possible again after its header reform. We need it to get the
	  SEEK_ constants.

2004-05-31  Andreas Kupries  <andreask@activestate.com>

	* generic/random.c: Added empty BMP. Also removed references to
	  the 'null' channel, changed them into 'random'.

	* Makefile.in: Fixed typo DOC_* => DOC_*. Caused the documentation
	  to not be installed.

2004-05-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:      Added a dependency rule to document creation -
	                    fixes SF bug #681115

2004-05-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:         Added random channel.
	* generic/random.c:
	* tests/random.test:
	* doc/random.man:
	* generic/init.c: